--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h1>Clinic Dashboard</h1>
 
     <div id="logo">
-        <img src="C:\Users\sajaa\OneDrive\Desktop\SIRGAD\SIRGAD_logo.png" alt="SIRGAD Logo"> <!-- Add path to logo image -->
+        <img src="SIRGAD_logo.png" alt="SIRGAD Logo"> <!-- Add path to logo image -->
     </div>
 
     <!-- Chart Containers -->
